syntax = "proto3";

package  netmarks_tools;

option go_package = "NetMARKS/services/tools/proto";

service Tools {
  rpc Produce(Request) returns (Response) {}
}

message Request {
  uint64 quantity = 1;
  string response_size = 2;
}

message Response {
  uint64 quantity = 1;
  repeated Single items = 2;
}

message Single {
  string id = 1;
  string random_metadata = 2;
  string ironore_id = 3;
  string board_id = 4;
}
